--- a/template/package.json
+++ b/template/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap-less": "^3.3.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
