--- a/template/package.json
+++ b/template/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "bootstrap-less": "^3.3.8",
     "react": "^16.12.0",
+    "react-contenteditable": "^3.3.3",
     "react-dom": "^16.12.0",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
-    "redux-form": "^8.2.6"
+    "redux-form": "^8.2.6",
+    "sanitize-html": "^1.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
