--- a/template/package.json
+++ b/template/package.json
@@ -7,6 +7,7 @@
     "react": "^16.12.0",
     "react-contenteditable": "^3.3.3",
     "react-dom": "^16.12.0",
+    "react-html-parser": "^2.0.2",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
